--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Multi-view MidiVAE: Fusing Track- and Bar-view Representations for Long Multi-track Symbolic Music Generation"
+title: "Conversational Co-Speech Gesture Generation via Modeling Dialog Intention, Emotion, and Context with Diffusion Models"
 description: Submitted to ICASSP 2024
 show_downloads: False
 google_analytics:
